force-app/main/default/objects/Transaction__c/fields/Fine_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount_Paid__c</fullName>
    <label>Fine Amount Paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>