force-app/main/default/objects/Transaction__c/fields/IsRenewed__c.field-meta.xml
<CustomField>
    <fullName>IsRenewed__c</fullName>
    <formula>IF(ISBLANK(Return_Date__c) &amp;&amp; TODAY() &gt; Renewal_Date__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRenewed?</label>
    <type>Checkbox</type>
</CustomField>