force-app/main/default/objects/Transaction__c/fields/Librarian__c.field-meta.xml
<CustomField>
    <fullName>Librarian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Librarian</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>