force-app/main/default/objects/Transaction__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <formula>IF(AND(ISBLANK(Return_Date__c), TODAY() &gt; Due_Date__c), TODAY() - Due_Date__c, IF(AND(NOT(ISBLANK(Return_Date__c)), Return_Date__c &gt; Due_Date__c), Return_Date__c - Due_Date__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>