force-app/main/default/objects/Transaction__c/validationRules/Cannot_Issue_Book_with_No_Copies.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Issue_Book_with_No_Copies</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Transaction_Status__c , &apos;Issued&apos;)  &amp;&amp;  Book__r.Total_Copies__c  = 0</errorConditionFormula>
    <errorMessage>No available copies of this book.</errorMessage>
</ValidationRule>