force-app/main/default/objects/Transaction__c/validationRules/Fine_Amount_Paid_Cannot_Exceed_Fine.validationRule-meta.xml
<ValidationRule>
    <fullName>Fine_Amount_Paid_Cannot_Exceed_Fine</fullName>
    <active>true</active>
    <errorConditionFormula>Fine_Amount_Paid__c  &gt;  Fine_Amount__c</errorConditionFormula>
    <errorDisplayField>Fine_Amount_Paid__c</errorDisplayField>
    <errorMessage>Fine amount paid cannot exceed total fine.</errorMessage>
</ValidationRule>